Add java ending to example files

--- a/slides/index.html
+++ b/slides/index.html
@@ -200,7 +200,7 @@ object GreetingActor extends App {
   actorRef ! "Hulk Hogan"
 }</pre>
         </article>
-        <span class="example">GreetingActor_1.scala</span>
+        <span class="example">GreetingActor_1.java|scala</span>
     </slide>
 
 
@@ -227,7 +227,7 @@ object GreetingActor extends App {
   actorRef ! SayHello("Pope Benedict")
 }</pre>
             </article>
-        <span class="example">GreetingActor_2.scala</span>
+        <span class="example">GreetingActor_2.java|scala</span>
 
 
     </slide>
@@ -263,7 +263,7 @@ class GreetingActor(delay: FiniteDuration) extends Actor {
 
 }</pre>
         </article>
-        <span class="example">GreetingActor_3.scala</span>
+        <span class="example">GreetingActor_3.java|scala</span>
     </slide>
 
 
@@ -365,7 +365,7 @@ class Supervisor extends Actor {
     }
 }</pre>
         </article>
-        <span class="example">SupervisorActor.scala</span>
+        <span class="example">SupervisorActor.java|scala</span>
     </slide>
 
 
@@ -389,7 +389,7 @@ class DeathWatchActor extends Actor {
   }
 }</pre>
         </article>
-        <span class="example">DeathWatchActor.scala</span>
+        <span class="example">DeathWatchActor.java|scala</span>
     </slide>
 
 
@@ -417,7 +417,7 @@ class DeathWatchActor extends Actor {
   }
 }</pre>
                 </article>
-        <span class="example">LifeCycleActor.scala</span>
+        <span class="example">LifeCycleActor.java|scala</span>
             </slide>
 
 
@@ -526,7 +526,7 @@ object ComputeRouterExample extends App {
     router ! "how long is this string?"
 }</pre>
         </article>
-        <span class="example">ComputeRouter_1.scala</span>
+        <span class="example">ComputeRouter_1.java|scala</span>
 
 
     </slide>
@@ -537,8 +537,8 @@ object ComputeRouterExample extends App {
         </hgroup>
         <article class="large">
             <ul>
-                <li>Implement SuperComputeActor.scala</li>
-                <li>Make tests in SuperComputerActorTest.scala green</li>
+                <li>Implement SuperComputeActor.java|scala</li>
+                <li>Make tests in SuperComputerActorTest.java|scala green</li>
             </ul>
 
             <br>
