--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ URL: https://code.google.com/p/io-2012-slides
                 <li>Code: <a href="https://github.com/arild/akka-workshop">https://github.com/arild/akka-workshop</a></li>
                 <li>
                     <ul>
-                        <li>'master' is starting point for exercises</li>
-                        <li>'git checkout solution' for solution</li>
+                        <li>'java' and 'scala' are starting point for exercises</li>
+                        <li>'java-solution' and 'scala-solution' for solution</li>
+                        <li>E.g. 'git checkout java' for branch with Java exercises</li>
                     </ul>
                 </li>
             </ul>
@@ -54,7 +55,7 @@ URL: https://code.google.com/p/io-2012-slides
                 <li>Slides: <a href="http://arild.github.com/akka-workshop">http://arild.github.com/akka-workshop</a></span></li>
                 <li>
                     <ul>
-                        <li>Or /slides/index.html in repo</li>
+                        <li>Or /slides/index.html in 'master' branch</li>
                     </ul>
                 </li>
 
@@ -189,17 +190,17 @@ URL: https://code.google.com/p/io-2012-slides
 
 class GreetingActor extends Actor {
   def receive = {
-    case message : String => println("Hello " + message)
+    case message: String => println("Hello " + message)
   }
 }
 
 object GreetingActor extends App {
   val system = ActorSystem("MySystem")
-  val actorRef = system.actorOf(Props[GreetingActor])
-  actorRef ! "Hulk Hogan"
+  val greetingActor: ActorRef = system.actorOf(Props[GreetingActor])
+  greetingActor ! "Hulk Hogan"
 }</pre>
         </article>
-        <span class="example">GreetingActor_1.scala</span>
+        <span class="example">GreetingActor_1.java|scala</span>
     </slide>
 
 
@@ -214,19 +215,19 @@ case class SayHello(name: String)
 
 class GreetingActor extends Actor {
   def receive = {
-    case hello : SayHello => {
+    case hello: SayHello => {
       println("Hello " + hello.name)
-      sender ! " a reply"
+      sender ! hello.name
     }
   }
 }
 
 object GreetingActor extends App {
-  val actorRef = ActorSystem("MySystem").actorOf(Props[GreetingActor])
-  actorRef ! SayHello("Pope Benedict")
+  val greetingActor = ActorSystem("MySystem").actorOf(Props[GreetingActor])
+  greetingActor ! SayHello("Pope Benedict")
 }</pre>
             </article>
-        <span class="example">GreetingActor_2.scala</span>
+        <span class="example">GreetingActor_2.java|scala</span>
 
 
     </slide>
@@ -240,7 +241,7 @@ object GreetingActor extends App {
     <pre class="prettyprint">import akka.actor._
 import scala.concurrent.duration._
 
-case class DoGreeting()
+object DoGreeting
 
 class GreetingActor(delay: FiniteDuration) extends Actor {
 
@@ -259,10 +260,9 @@ class GreetingActor(delay: FiniteDuration) extends Actor {
     import context.dispatcher
     context.system.scheduler.scheduleOnce(delay, self, DoGreeting)
   }
-
 }</pre>
         </article>
-        <span class="example">GreetingActor_3.scala</span>
+        <span class="example">GreetingActor_3.java|scala</span>
     </slide>
 
 
@@ -273,22 +273,22 @@ class GreetingActor(delay: FiniteDuration) extends Actor {
         <article class="large">
             <ul>
                <li>git clone <a href="https://github.com/arild/akka-workshop.git">https://github.com/arild/akka-workshop.git</a></li>
-               <li>Implement ComputeActor.scala</li>
-               <li>Make tests in ComputeActorTest.scala green</li>
+               <li>Implement ComputeActor</li>
+               <li>Make tests in ComputeActorTest green</li>
                <li>Have a look in the package called "work"</li>
             </ul>
             <br>
+
             <ul>
-                <li>Useful resources:
+                <li>Docs:
                     <ul>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.4/scala/actors.html#creating-actors">http://doc.akka.io/docs/akka/2.3.4/scala/actors.html#creating-actors</a> </li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.4/scala/scheduler.html">http://doc.akka.io/docs/akka/2.3.4/scala/scheduler.html</a> </li>
+                        <li>Creating actors<a style="margin-left: 1em" href="http://doc.akka.io/docs/akka/2.3.5/java/lambda-actors.html#creating-actors">Java</a>|<a href="http://doc.akka.io/docs/akka/2.3.5/scala/actors.html#creating-actors">Scala</a></li>
+                        <li>Scheduling messages<a style="margin-left: 1em" href="http://doc.akka.io/docs/akka/2.3.5/java/scheduler.html">Java</a>|<a href="http://doc.akka.io/docs/akka/2.3.5/scala/scheduler.html">Scala</a></li>
                     </ul>
                 </li>
             </ul>
         </article>
     </slide>
-
 
     <slide>
         <hgroup>
@@ -298,7 +298,7 @@ class GreetingActor(delay: FiniteDuration) extends Actor {
             <ul>
                 <li>The testOnly task accepts a whitespace separated list of test names to run<br /><br />
                 <pre class="prettyprint">$ ./sbt
-> test-only workshop.part1.BestEverTest workshop.part1.ImaginaryTest</pre>
+> test-only workshop.part1.ComputeActorTest workshop.part1.AnotherTest</pre>
                 </li>
                 <li>The testOnly task supports wildcards and ~ (autorun) as well<br /><br />
                     <pre class="prettyprint">$ ./sbt
@@ -364,7 +364,7 @@ class Supervisor extends Actor {
     }
 }</pre>
         </article>
-        <span class="example">SupervisorActor.scala</span>
+        <span class="example">SupervisorActor.java|scala</span>
     </slide>
 
 
@@ -378,9 +378,9 @@ class Supervisor extends Actor {
 class DeathWatchActor extends Actor {
 
   override def preStart() {
-    val actorRef: ActorRef = context.actorOf(Props[VolatileGreetingActor])
-    context.watch(actorRef)
-    actorRef ! "print this message, please!"
+    val greetingActor = context.actorOf(Props[VolatileGreetingActor])
+    context.watch(greetingActor)
+    greetingActor ! "print this message, please!"
   }
 
   def receive = {
@@ -388,7 +388,7 @@ class DeathWatchActor extends Actor {
   }
 }</pre>
         </article>
-        <span class="example">DeathWatchActor.scala</span>
+        <span class="example">DeathWatchActor.java|scala</span>
     </slide>
 
 
@@ -416,7 +416,7 @@ class DeathWatchActor extends Actor {
   }
 }</pre>
                 </article>
-        <span class="example">LifeCycleActor.scala</span>
+        <span class="example">LifeCycleActor.java|scala</span>
             </slide>
 
 
@@ -425,7 +425,7 @@ class DeathWatchActor extends Actor {
                     <h2>What happens on an actor restart</h2>
                 </hgroup>
                 <article>
-        <p><a href="http://doc.akka.io/docs/akka/2.3.4/general/supervision.html#what-restarting-means">What restarting means</a></p>
+        <p><a href="http://doc.akka.io/docs/akka/2.3.5/general/supervision.html#what-restarting-means">What restarting means</a></p>
         </article>
         </slide>
 
@@ -453,25 +453,25 @@ class DeathWatchActor extends Actor {
                 <li>
                     <h3>Supervision</h3>
                     <ul>
-                        <li>Implement ComputeSupervisor.scala</li>
-                        <li>Make tests in ComputeSupervisorTest.scala green</li>
+                        <li>Implement ComputeSupervisor</li>
+                        <li>Make tests in ComputeSupervisorTest green</li>
                     </ul>
                 </li>
                 <li>
                     <h3>Death Watch</h3>
                     <ul>
-                        <li>Implement ClientActor.scala</li>
-                        <li>Make tests in ClientActorTest.scala green</li>
+                        <li>Implement ClientActor</li>
+                        <li>Make tests in ClientActorTest green</li>
                     </ul>
                 </li>
             </ul>
 
             <br>
             <ul>
-                <li>Useful resources:
+                <li>Docs:
                     <ul>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.4/scala/fault-tolerance.html#Creating_a_Supervisor_Strategy">Creating a Supervisor Strategy</a> </li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.4/scala/actors.html#Lifecycle_Monitoring_aka_DeathWatch">Lifecycle Monitoring aka DeathWatch</a> </li>
+                        <li>Creating a Supervisor Strategy<a style="margin-left: 1em" href="http://doc.akka.io/docs/akka/2.3.5/java/lambda-fault-tolerance.html#Creating_a_Supervisor_Strategy">Java</a>|<a href="http://doc.akka.io/docs/akka/2.3.5/scala/fault-tolerance.html#Creating_a_Supervisor_Strategy">Scala</a></li>
+                        <li>Lifecycle Monitoring aka DeathWatch<a style="margin-left: 1em" href="http://doc.akka.io/docs/akka/2.3.5/java/untyped-actors.html#Lifecycle_Monitoring_aka_DeathWatch">Java</a>|<a href="http://doc.akka.io/docs/akka/2.3.5/scala/actors.html#Lifecycle_Monitoring_aka_DeathWatch">Scala</a></li>
                     </ul>
                 </li>
             </ul>
@@ -492,16 +492,26 @@ class DeathWatchActor extends Actor {
     </slide>
 
     <slide>
+        <hgroup><h2>Routers</h2></hgroup>
+        <article>
+            <ul>
+                <li>Routers are not actors, they are specifically designed for concurrency</li>
+                <li>Akka comes with different routers</li>
+            </ul>
+            <img src="figures/routers.png" style="max-height: 300px;" />
+        </article>
+    </slide>
+
+    <slide>
         <hgroup>
             <h2>Router example</h2>
         </hgroup>
         <article>
         <pre class="prettyprint">class ComputeRouter_1 extends Actor {
-    val router: ActorRef =
-        context.actorOf(RoundRobinPool(50).props(Props[Routee]), "router1")
+    val router = context.actorOf(RoundRobinPool(50).props(Props[Routee]), "router1")
 
     def receive = {
-        case s : String => router.tell(s, sender())
+        case s: String => router.tell(s, sender())
     }
 }
 
@@ -514,7 +524,7 @@ object ComputeRouterExample extends App {
     router ! "how long is this string?"
 }</pre>
         </article>
-        <span class="example">ComputeRouter_1.scala</span>
+        <span class="example">ComputeRouter_1.java|scala</span>
 
 
     </slide>
@@ -525,8 +535,8 @@ object ComputeRouterExample extends App {
         </hgroup>
         <article class="large">
             <ul>
-                <li>Implement SuperComputeActor.scala</li>
-                <li>Make tests in SuperComputerActorTest.scala green</li>
+                <li>Implement SuperComputeActor.java|scala</li>
+                <li>Make tests in SuperComputerActorTest.java|scala green</li>
             </ul>
 
             <br>
@@ -534,8 +544,9 @@ object ComputeRouterExample extends App {
                 <li>Play around with:
                     <ul>
                         <li>Create multiple actors (one for each unit of work)</li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.4/scala/routing.html">Use a router</a> </li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.4/scala/futures.html">Use futures</a> </li>
+
+                        <li>Use a router<a style="margin-left: 1em" href="http://doc.akka.io/docs/akka/2.3.5/java/routing.html">Java</a>|<a href="http://doc.akka.io/docs/akka/2.3.5/scala/routing.html">Scala</a></li>
+                        <li>Use futures<a style="margin-left: 1em" href="http://doc.akka.io/docs/akka/2.3.5/java/futures.html">Java</a>|<a href="http://doc.akka.io/docs/akka/2.3.5/scala/futures.html">Scala</a></li>
                     </ul>
                 </li>
             </ul>
