Add actor lifecycle link in slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -441,6 +441,7 @@ class DeathWatchActor extends Actor {
                 </hgroup>
                 <article>
         <p><a href="http://doc.akka.io/docs/akka/2.3.5/general/supervision.html#what-restarting-means">What restarting means</a></p>
+        <p><a href="http://doc.akka.io/docs/akka/2.3.5/scala/actors.html#Actor_Lifecycle">Actor Lifecycle</a></p>
         </article>
         </slide>
 
