--- a/slides/index.html
+++ b/slides/index.html
@@ -116,7 +116,7 @@ URL: https://code.google.com/p/io-2012-slides
         <article>
             <ul class="build">
                 <li>"Toolkit" for the JVM</li>
-                <li>Extensive documentation (~350 pages)</li>
+                <li>Extensive documentation (~460 pages for Java)</li>
                 <li>Concurrency & Distribution</li>
                 <li>Resilient</li>
                 <li>High performance</li>
