--- a/slides/index.html
+++ b/slides/index.html
@@ -113,8 +113,8 @@ URL: https://code.google.com/p/io-2012-slides
         <hgroup>
             <h2>What is Akka</h2>
         </hgroup>
-        <article>
-            <ul class="build">
+        <article class="build">
+            <ul>
                 <li>"Toolkit" for the JVM</li>
                 <li>Extensive documentation (~460 pages for Java)</li>
                 <li>Concurrency & Distribution</li>
@@ -137,8 +137,8 @@ URL: https://code.google.com/p/io-2012-slides
         <hgroup>
             <h2>Where should you use Akka</h2>
         </hgroup>
-        <article>
-            <ul class="build">
+        <article class="build">
+            <ul>
                 <li>Transaction processing (banking, gaming, statistics)</li>
                 <li>Service backend (SOAP, REST, WebSockets)</li>
                 <li>Batch processing</li>
