Add bekk technology radar

--- a/slides/index.html
+++ b/slides/index.html
@@ -147,6 +147,19 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
     </slide>
 
+    <slide>
+        <hgroup>
+            <h2>BEKK's Technology Radar</h2>
+        </hgroup>
+        <article>
+            <p class="flexbox vcenter">
+                <img src="figures/teknologiradar.png" style="max-height: 500px" />
+                <a href="https://radar.bekk.no/techradar">https://radar.bekk.no/techradar</a>
+            </p>
+        </article>
+    </slide>
+
+
 
     <slide>
         <hgroup>
