Started on speakers notes

--- a/slides/index.html
+++ b/slides/index.html
@@ -39,6 +39,14 @@ URL: https://code.google.com/p/io-2012-slides
     </slide>
 
     <slide class="thank-you-slide">
+        <aside class="note">
+            <section>
+                <ul>
+                    <li>Example code presented in the slides will be in scala.</li>
+                    <li>All the example code can be found in both the Scala and Java branch.</li>
+                </ul>
+            </section>
+        </aside>
         <article class="flexbox vleft">
             <ul>
                 <li>Code: <a href="https://github.com/arild/akka-workshop">https://github.com/arild/akka-workshop</a></li>
@@ -102,13 +110,19 @@ URL: https://code.google.com/p/io-2012-slides
 
     <slide>
         <aside class="note">
-            <ul>
-            <li>Build concurrent & distributed applications more easily</li>
-            <li>Asynchronous and concurrency through high-level abstranctions like Actors, Futures and Software Transactional Memory (STM not covered in this workshop)</li>>
-            <li>Self-healing with supervisor hierarchys<li>
-            <li>Small memory footprint, a node capable of thousands of Threads can handle millions of actors. Msg throughput as high as 60 million msg/sec</li>
-            <li>Adaptive load balancing, routing, partitioning and configuration-driven remoting (deploy first without topology-config, and configure this remotely later)</li>
-            </ul>
+            <section>
+                <ul>
+                    <li>Akka is an open-source toolkit and runtime for simplifying the construction of concurrent and distributed applications on the JVM.</li>
+                    <li>Asynchronous and concurrency through high-level abstranctions like Actors, Futures and Software Transactional Memory</li>
+                    <li>Self-healing with supervisor hierarchies.<li>
+                    <li>Capable of handling up to 50 million msg/sec on a single machine.</li>
+                    <li>Small memory footprint; ~2.5 million actors per GB of heap.</li>
+                    <li>Adaptive load balancing, routing, partitioning and configuration-driven remoting (deploy first without topology-config, and configure this remotely later)</li>
+                    <li>Written in Scala, and as of Scala 2.10 included as part of the Scala standard library.</li>
+                    <li>Language bindings exist for both Java and Scala</li>
+                    <li>Inspired by Erlang</li>
+                </ul>
+            </section>
         </aside>
         <hgroup>
             <h2>What is Akka</h2>
